comar sayfası yeni belgeler/kodlar için düzeltildi.

--- a/trunk/web/projeler/comar/index.html
+++ b/trunk/web/projeler/comar/index.html
@@ -65,17 +65,10 @@ sistemi yakından ve uzaktan yönetilebilir kılmak amaçlarını güden bir
 <center><table class="metin" cellspacing=10><tbody>
 
 <tr>
-<td align="left"><b>ÇOMAR Nedir?</b> (08/02/2005)</td>
-<td><a href="./nedir/index.html">HTML</a></td>
-<td><a href="./nedir/nedir.html">HTML (tek sayfa)</a></td>
-<td><a href="./nedir/nedir.pdf">PDF (45 KB)</a></td>
-</tr>
-
-<tr>
-<td align="left"><b>ÇOMAR Mimarisi</b> (25/02/2005)</td>
+<td align="left"><b>ÇOMAR Mimarisi</b> (01/08/2005)</td>
 <td><a href="./mimari/index.html">HTML</a></td>
 <td><a href="./mimari/mimari.html">HTML (tek sayfa)</a></td>
-<td><a href="./mimari/mimari.pdf">PDF (22 KB)</a></td>
+<td><a href="./mimari/mimari.pdf">PDF (55 KB)</a></td>
 </tr>
 
 </tbody></table></center>
@@ -86,7 +79,7 @@ sistemi yakından ve uzaktan yönetilebilir kılmak amaçlarını güden bir
 </p>
 
 <p class="icmetin">
-<a href="http://svn.uludag.org.tr/uludag/trunk/COMAR/">http://svn.uludag.org.tr/uludag/trunk/COMAR/</a>
+<a href="http://svn.uludag.org.tr/uludag/trunk/comar/">http://svn.uludag.org.tr/uludag/trunk/comar/</a>
 </p>
 
 </div>
