--- a/trunk/web/projeler/comar/mimari/node_17.html
+++ b/trunk/web/projeler/comar/mimari/node_17.html
@@ -45,35 +45,26 @@
 
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_9.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_11.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_16.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_18.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>ÇOMAR<BR>
-<FONT COLOR=purple>(Configuration Manager)</FONT><BR>
-Nedir?, Yenir mi?</H1>
+<H1 ALIGN=center>ÇOMAR Mimari Belgesi</H1>
 
-<H3 ALIGN=center>Dürtücü Teknolojiler Ar&amp;Ge Labs.</H3>
-<BLOCKQUOTE><B>Özet: </B>
-Bu belge, ÇOMAR'ın ne olduğunu ve ÇOMAR gibi bir altyapıya neden ihtiyaç
-duyulduğunu mimari ve yöntem ile iglili teknik ayrıntılara girmeksizin,
-basit bir dille anlatmayı hedeflemiştir. Çok genel bir giriş teşkil
-etmesi amacıyla en basit anlamda ÇOMAR, bir yapılandırma altyapısı
-olarak tanımlanabilir.<BR>
+<H3 ALIGN=center>Gürer Özen (gurer @ uludag.org.tr)</H3>
+
+<H3><A NAME="htoc17">5.2</A>&nbsp;&nbsp;ÇOMAR bana ne fayda sağlayacak?</H3>
+Kurduğunuz uygulamaları elle ayarlamaktan, sistemin zaten bildiği
+ve kendi başına bulabileceği bilgileri elle girmekten, bunun için
+belge okuyup soru sorarak zaman kaybetmekten kurtulacaksınız.<BR>
 <BR>
-
-<H3><A NAME="htoc10">6.4</A>&nbsp;&nbsp;ÇOMAR'ı devreden çıkarabilecek miyim, bu hali ile sistemi kullanmaya
-devam edebilecek miyim?</H3><!--SEC END -->
-
-Evet ÇOMAR'ı devreden çıkarabileceksiniz, ve sisteminiz çalışmaya
-devam edecek. Fakat bunu yaptığınızda herhangi bir konfigürasyon değişikliği
-artık kendi kendine olmayacak, uygulamalar değişikliklerden haberdar
-olup kendilerini yeniden yapılandıramayacaklardır. Fakat bir Linux
-sisteme aşina olanlar yapılandırma dosyalarına müdahale ederek sistemin
-yapılandırmasının sürekliliğini elle sağlayabileceklerdir. ÇOMAR'ın
-aktif olmaması sistemi çalışmaz hale getirmeyecek fakat olması sistemi
-iyi çalışır hale getirecektir.<BR>
+Sistemin sürekli olarak tutarlı bir durumda kalmasını sağlayarak,
+ayar sorunları yüzünden çalışamayan programlardan sizi kurtaracak.<BR>
 <BR>
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_9.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_11.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+Sunduğu imkanlar ile tek tek uygulama ayarlamaktan ziyade, görev temelli
+düşünülmüş grafik arayüzler yazılmasını kolaylaştıracak, bu arayüzler
+sayesinde bilgisayara kölelik yapmak yerine kendi işinizle uğraşabileceksiniz.<BR>
+<BR>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_16.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_18.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
