--- a/trunk/web/projeler/comar/mimari/index.html
+++ b/trunk/web/projeler/comar/mimari/index.html
@@ -48,31 +48,46 @@
 <table class='navbar'><tbody><tr><td class='navhide'><img src='../../../images/nav_back.png'> Önceki sayfa</td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_1.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>VÇTD<BR>
-(VÇTD Çomar Tasarımı Değildir)</H1>
+<H1 ALIGN=center>ÇOMAR Mimari Belgesi</H1>
 
-<H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
+<H3 ALIGN=center>Gürer Özen (gurer @ uludag.org.tr)</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3>
 <H2>İçindekiler</H2>
 <UL><LI>
-<A HREF="node_1.html#htoc1">1&nbsp;&nbsp;Sorun</A>
+<A HREF="node_1.html#htoc1">1&nbsp;&nbsp;Giriş</A>
+<LI><A HREF="node_2.html#htoc2">2&nbsp;&nbsp;Sorun</A>
 <UL><LI>
-<A HREF="node_2.html#htoc2">1.1&nbsp;&nbsp;Dağıtımların Yaklaşımı</A>
-<LI><A HREF="node_3.html#htoc3">1.2&nbsp;&nbsp;İşletim Sistemleri</A>
-<LI><A HREF="node_4.html#htoc4">1.3&nbsp;&nbsp;Uzman Sistemler</A>
+<A HREF="node_3.html#htoc3">2.1&nbsp;&nbsp;Belgeler</A>
+<LI><A HREF="node_4.html#htoc4">2.2&nbsp;&nbsp;Diğer Linux Dağıtımları</A>
+<LI><A HREF="node_5.html#htoc5">2.3&nbsp;&nbsp;Diğer İşletim Sistemleri</A>
+<LI><A HREF="node_6.html#htoc6">2.4&nbsp;&nbsp;Özel Yönetim Uygulamaları</A>
 </UL>
-<LI><A HREF="node_5.html#htoc5">2&nbsp;&nbsp;Gereksinimler</A>
-<LI><A HREF="node_6.html#htoc6">3&nbsp;&nbsp;COMAR</A>
+<LI><A HREF="node_7.html#htoc7">3&nbsp;&nbsp;Gerekler</A>
 <UL><LI>
-<A HREF="node_6.html#htoc7">3.1&nbsp;&nbsp;Nesne Modeli</A>
-<LI><A HREF="node_6.html#htoc8">3.2&nbsp;&nbsp;CSL</A>
-<LI><A HREF="node_6.html#htoc9">3.3&nbsp;&nbsp;Betikler</A>
-<LI><A HREF="node_6.html#htoc10">3.4&nbsp;&nbsp;comard</A>
-<LI><A HREF="node_6.html#htoc11">3.5&nbsp;&nbsp;KGA</A>
+<A HREF="node_7.html#htoc8">3.1&nbsp;&nbsp;Kullanıcı Gerekleri</A>
+<LI><A HREF="node_7.html#htoc9">3.2&nbsp;&nbsp;Geliştirici Gerekleri</A>
 </UL>
+<LI><A HREF="node_8.html#htoc10">4&nbsp;&nbsp;ÇOMAR</A>
+<UL><LI>
+<A HREF="node_9.html#htoc11">4.1&nbsp;&nbsp;Sistem Modeli</A>
+<LI><A HREF="node_12.html#htoc12">4.2&nbsp;&nbsp;Aracı Programcıklar (CSL)</A>
+<LI><A HREF="node_13.html#htoc13">4.3&nbsp;&nbsp;Yapılandırma Yöneticisi</A>
+<LI><A HREF="node_14.html#htoc14">4.4&nbsp;&nbsp;Kullanıcı Arayüzleri</A>
 </UL>
-
+<LI><A HREF="node_15.html#htoc15">5&nbsp;&nbsp;Sıkça Sorulanlar</A>
+<UL><LI>
+<A HREF="node_16.html#htoc16">5.1&nbsp;&nbsp;ÇOMAR'ın açılımı nedir?</A>
+<LI><A HREF="node_17.html#htoc17">5.2&nbsp;&nbsp;ÇOMAR bana ne fayda sağlayacak?</A>
+<LI><A HREF="node_18.html#htoc18">5.3&nbsp;&nbsp;ÇOMAR desteklemeyen uygulamaları kullanabilecek miyim?</A>
+<LI><A HREF="node_19.html#htoc19">5.4&nbsp;&nbsp;Bir uygulamaya ÇOMAR desteği vermek zor mu?</A>
+<LI><A HREF="node_20.html#htoc20">5.5&nbsp;&nbsp;CSL yeni bir dil mi?</A>
+<LI><A HREF="node_21.html#htoc21">5.6&nbsp;&nbsp;ÇOMAR ile PİSİ arasında nasıl bir ilişki var?</A>
+<LI><A HREF="node_22.html#htoc22">5.7&nbsp;&nbsp;ÇOMAR'ı devreden çıkartırsam ne olur?</A>
+<LI><A HREF="node_23.html#htoc23">5.8&nbsp;&nbsp;ÇOMAR'ın kconfig, gconf, elektra gibi sistemlerden farkı ne?</A>
+<LI><A HREF="node_24.html#htoc24">5.9&nbsp;&nbsp;Neden başkaları böyle bir çözüm getirmedi?</A>
+</UL>
+<LI><A HREF="node_25.html#htoc25">6&nbsp;&nbsp;Emeği Geçenler</A>
+</UL>
 
 <table class='navbar'><tbody><tr><td class='navhide'><img src='../../../images/nav_back.png'> Önceki sayfa</td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_1.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
