--- a/trunk/web/projeler/comar/mimari/node_16.html
+++ b/trunk/web/projeler/comar/mimari/node_16.html
@@ -45,24 +45,21 @@
 
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
-<table class='navbar'><tbody><tr><td class='navbut'><a href='node_1.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_3.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_15.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_17.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
 <H1 ALIGN=center>ÇOMAR Mimari Belgesi</H1>
 
 <H3 ALIGN=center>Gürer Özen (gurer @ uludag.org.tr)</H3>
 
-<H2><A NAME="htoc2">2</A>&nbsp;&nbsp;Sorun</H2>
-Çeşitli uygulamalar bir sistem içinde bir araya getirildiklerinde,
-birbirleriyle uyumlu çalışabilmeleri için ayarlanmaları gerekmektedir.
-Kurulan bir uygulamanın masaüstü menüsüne eklenmesi, açabildiği dosya
-tiplerini sisteme bildirmesi, yeni kurulan bir spam (istenmeyen eposta)
-filtreleyicinin mevcut eposta sunucusuna bağlanması gibi çok sayıda
-entegrasyon işlemi bulunmaktadır. Kullanıcı, bu ayarları yapabilmek
-için, kendi yapmak istediği işin dışındaki teknik konularda bilgi
-kazanmak zorunda kalmakta ve zaman kaybetmektedir.<BR>
+<H3><A NAME="htoc16">5.1</A>&nbsp;&nbsp;ÇOMAR'ın açılımı nedir?</H3>
+COnfiguration MAnageR. ÇOMAR'ın açılımı ilk olarak ``Configuration
+by Objects, Modify and Restart'' idi. Fakat ÇOMAR'ın tasarım sürecinde
+``Modify and Restart'' kısmının ÇOMAR'ın işlevselliğini tam olarak
+ifade etmez hale geldiği görüldü ve açılımının ``Configuration
+Manager'' olmasının daha doğru ve anlamlı olacağında karar kılındı.<BR>
 <BR>
-<UL><LI><A HREF='./node_3.html'>Belgeler</A></LI><LI><A HREF='./node_4.html'>Diğer Linux Dağıtımları</A></LI><LI><A HREF='./node_5.html'>Diğer İşletim Sistemleri</A></LI><LI><A HREF='./node_6.html'>Özel Yönetim Uygulamaları</A></LI></UL><table class='navbar'><tbody><tr><td class='navbut'><a href='node_1.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_3.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
+<table class='navbar'><tbody><tr><td class='navbut'><a href='node_15.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_17.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
 
