--- a/trunk/web/projeler/comar/mimari/node_3.html
+++ b/trunk/web/projeler/comar/mimari/node_3.html
@@ -48,50 +48,23 @@
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_2.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>VÇTD<BR>
-(VÇTD Çomar Tasarımı Değildir)</H1>
+<H1 ALIGN=center>ÇOMAR Mimari Belgesi</H1>
 
-<H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
+<H3 ALIGN=center>Gürer Özen (gurer @ uludag.org.tr)</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3>
-<H3><A NAME="htoc3">1.2</A>&nbsp;&nbsp;İşletim Sistemleri</H3>
-Windows, OS/2, MacOS X gibi ticari işletim sistemlerinde, sistemin
-parçaları ve kullanıcının çalışma ortamını oluşturan uygulamalar genellikle
-tek bir merkezden çıktıkları için, uyum sorunları işletim sisteminin
-çağrıları (API si) üzerinden çözülmektedir. Ayarları toplu halde tutan
-merkezi bir kütük; çokluortam, ağ protokolü, donanım yöneticisi gibi
-parçalar için parçaların yerleşebileceği modül yapıları bulunmaktadır.<BR>
+<H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;Belgeler</H3>
+Özgür yazılım camiası, bu işleri kolaylaştırmak için ``nasıl''
+(ing. howto) belgeleri adıyla çeşitli belgeler hazırlamıştır. Bunlar
+bir işi yapabilmek için neler yapılması gerektiğini adım adım anlatan
+kısa belgelerdir. Kullanıcıların belge okumak istememeleri ve belgelerin
+kısıtlı sayıda senaryoyu kapsaması yüzünden faydalı olamamaktadırlar.<BR>
 <BR>
-Bu yöntemde şu noksanlıkları görüyoruz:
-<UL><LI>
-Uygulamaların ayarlarına merkezi erişim sunulması, tek başına istenen
-faydayı getirmemektedir. Bir genel model olmadığı için, bu bilgileri
-kullanmak isteyen kullanıcı yada diğer uygulamaların, bilgiyi sunan
-uygulama ve ayarları hakkında detaylı bilgiye sahip olması sorunu
-hala ortadadır.
-<LI>Uygulamalar ve yönetim sistemi arasında API düzeyinde bir ilişki,
-iki grubu iç içe geçirip direkt bağlantı sağlayacağı için, parçaların
-bağımsızlığını azaltacaktır. Bu da, ayrı ayrı parçaların geliştiricilerinin,
-adam/ay modelinde bağımsız çalışmak yerine, bir araya gelip karşılıklı
-iletişim ve senkronizasyon ile çalışmasına, dolayısıyla geliştirme
-işlerinin ölçeklenebilirliğinin azalmasına yol açmaktadır.
-<LI>Parçaların farklı ellerden çıktıkları ve alternatiflerin bol olduğu
-özgür yazılım modeline uymamaktadır.
-<LI>Dağıtımımıza girecek uygulamaları yeni API leri kullanacak şekilde
-değiştirmek, uygulama kodunu çok iyi incelemeyi, yapılan değişikliklerin
-yeni sorunlara yol açmadığını kapsamlı olarak analiz etmeyi gerektirmektedir.
-Bu da büyük zaman ve emek harcamasına yol açacaktır.
-<LI>Bir alt sistemin yetersiz kaldığı görülüp yeni bir alt sistem yapısı
-geliştirildiğinde, API değişikliğine yol açmamak için API üzerindeki
-değer ve çağrılara kapsamları dışında anlamlar ve görevler yüklenmekte,
-ve API yi öğrenmek ve kullanmak isteyenlerin işi çok zorlaşmaktadır.
-Ya da API değişikliği yapılmakta, ve varolan uygulamaların yeni API
-yi taşınması, eski ve üçüncü parti uygulamalar için uyumluluk katmanları
-hazırlanması gibi fazladan sorunlar çıkmaktadır.
-<LI>Her dile API desteği verebilmek için ya CORBA gibi karmaşıklığı arttıracak
-teknolojiler ya da bakım işlerini yükseltecek çok sayıda ``wrapper''
-hazırlanması gereklidir.
-</UL>
+Burda aklımıza, madem bir işi adım adım belgeleyebiliyoruz, bunu bir
+program haline getirip otomatik olarak yapılmasını sağlayamaz mıyız?
+sorusu gelmektedir. Bu yapılabilirse, kullanıcının zaman tasarrufu
+yanında, bu belgelerin çeşitli dillere tercüme edilmesi gibi işler
+de gereksiz hale gelecektir.<BR>
+<BR>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_2.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
