--- a/trunk/web/projeler/comar/mimari/node_4.html
+++ b/trunk/web/projeler/comar/mimari/node_4.html
@@ -48,55 +48,50 @@
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_3.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_5.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>VÇTD<BR>
-(VÇTD Çomar Tasarımı Değildir)</H1>
+<H1 ALIGN=center>ÇOMAR Mimari Belgesi</H1>
 
-<H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
+<H3 ALIGN=center>Gürer Özen (gurer @ uludag.org.tr)</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3>
-<H3><A NAME="htoc4">1.3</A>&nbsp;&nbsp;Uzman Sistemler</H3>
-Linux'un masaüstü ve iş dünyasında kullanımının artmasıyla, bir takım
-genel yapılandırma ve yönetim araçları da geliştirilmiştir. YaST,
-LinuxConf, WebMin gibi bu araçlar kullanıcıya üst seviye bir arabirim
-sunup, kullanıcının burada yaptığı seçimleri uygulamaların alt seviye
-ayarlarına taşımaktadır. İki seviye arasında geçiş yapabilmek için
-gereken bilgiler araçların içinde bir dizi kural olarak kodlanmıştır.<BR>
+<H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;Diğer Linux Dağıtımları</H3>
+Linux dağıtımları gelişme süreçleri içerisinde bu tür entegrasyon
+problemleri ile karşılaştıkça bunlara ayrı ayrı çözümler üretip kendi
+sistemlerine (özellikle paket yönetici yazılımlarının içine) dahil
+etmişlerdir. Bu çözümler, kurulu uygulamalar (menü), fontlar, açılış
+işlemleri (initscripts) gibi tek tek alt sistemler bazındadır.<BR>
 <BR>
-Bundan başka, bilgisayar ağlarının yaygınlaşmasıyla birlikte, birden
-fazla bilgisayarın merkezi yönetimini yapabilecek IBM Tivoli, HP OpenView,
-CIM, SNMP, OSI CMIP gibi ürün ve çerçeveler ortaya çıkmıştır. Ayrıntılarda
-farkları olmakla birlikte, genel mimarileri, yönetilecek bilgisayarda
-bulunacak ajanlar, yönetim bilgisayarında bir yönetici yazılım, bunlar
-arasında bir iletişim protokolü ve yönetilecek görev ve ayarları belirten
-bilgi modellerinden oluşmaktadır. Yalnızca yapılandırma ile sınırlı
-kalmayıp, hata bulma, performans ve güvenlik değerlendirmeleri, kullanım
-hesaplama gibi işleri de yapmaktadırlar.<BR>
+Genellikle, uygulama paketleri, dosya sistemi üzerinde sabit bir dizine,
+söz konusu alt sisteme neler sağladıklarını kaydetmekte; bu alt sistemi
+kullanacak uygulamalar ise, buraya önceden belirlenmiş biçimde kaydedilen
+dosyaları tarayarak, sağlanan hizmetleri bulmaktadır. Uygulamaların
+entegrasyonu için, ya uygulamalar buradaki standartları bilecek biçimde
+değiştirilmekte, ya da gerekli çevrimi yapacak üçüncü bir yönetici
+uygulama araya sokulmaktadır. Kayıt ve çevrim işlemleri için özel
+veri biçimleri, kabuk, Perl ya da Python betikleri, bazen de bunların
+bir karışımı kullanılmaktadır.<BR>
 <BR>
-Bu sistemler de, kapsayıcı genel bir model yerine, tüm olası ayar
-ve görevleri sunmaya çalışmakta, yönetici yazılımı kullanacak kişinin
-yönetilecek her birimi ve bunlar arasındaki ilişkileri çok iyi bildiğini
-varsaymaktadır. Sorun kullanıcıdan alınıp yöneticiye taşındığında,
-artan miktardan dolayı başedilmez hale gelmektedir. Bu noktada yöneticiye
-yardımcı olacak uzman sistemler sunulmaktadır.<BR>
+Bir de uygulama kurulur, kaldırılır ve güncellenirken çalışan özel
+betikler bulunmaktadır. Bunlarla güncelleme sırasında eski ayarların
+taşınması gibi işler yapılmaktadır. Bazı sistemler (örneğin Debian'ın
+debconf'u) kurulum anında bu betiklerin kullanıcıya soru sorabilmeleri
+ve uygulamayı cevaplara göre ayarlamalarını sağlamaktadır.<BR>
 <BR>
-Her iki grup yazılım da, kolay kullanılır ve detaylarda boğulmamış
-bir yapılandırma arabirimi sunabilmek için, alt ve üst düzey bilgiler
-arasındaki ilişkileri tanımlayan kural dizileri kullanmakta ve bu
-kurallar, işin uzmanları tarafından, bir elden yönetici yazılımın
-içinde kodlanmaktadır. Yönetici yazılımın bir takım API ler ile bu
-bilgileri üst seviye, bazen üçüncü parti, uygulamalardan alması, bilginin
-parçalarda değil, merkezde bulunduğu gerçeğini değiştirmemektedir.<BR>
-<BR>
-Bu uzman sistem yaklaşımında şu noksanlıkları görmekteyiz:
+Burda gördüğümüz noksanlıklar:
 <UL><LI>
-Parçaların dinamik olarak değişmesi, eski kurallarda değişikler ve
-yeni kurallar gerektirmekte, kural dizilerini oluşturmayı zorlaştırmaktadır.
-<LI>Çok sayıda ve çeşitli parçalardan oluşan bir sistem için çok sayıda
-kural gerekmekte; kuralların işletilmesi, güncellenmesi, değiştirilmesi
-gittikçe büyüyen bir sorun olmaktadır.
-<LI>Kurallar birden fazla parçanın detaylı bilgilerini bir arada içerdiği
-için, kural yazmak çok zorlaşmakta, kuralların hata içermesi, öngörülmeyen
-durumları ihmal etmesi olasılıkları artmaktadır.
+Her sorun için ayrı bir çözüm kullanılması benzer işlerin tekrar tekrar
+yapılmasına yol açmaktadır. Genel bir ayar profili oluşturmayı ve
+yönetmeyi zor kılmaktadır. Birbirleriyle ilişkileri eksik kaldığı
+için yeterli entegrasyonu sağlayamamaktadır.
+<LI>Yapılandırma ile paket kurulumu iç içe geçmiştir. Bir paket (özellikle
+bir sunucu uygulaması) kurulduğunda çalışacak şekilde yapılandırılmasının
+yanlış olduğunu, uygulamanın ancak kullanıcı bir emir verdiğinde,
+verilen emre göre yapılandırılmasının anlamlı olduğunu düşünüyoruz.
+Yapılandırma, kurma ve kaldırma ile ilgisi olmayan ve uygulama sistemde
+durduğu sürece her an ihtiyaç duyulabilecek bir iştir.
+<LI>Bir sürü veri biçimi ve dil kullanılması, öğrenme ve hata düzeltme
+süreçlerini çok güçleştirmektedir.
+<LI>Bir sorun çıktığında sistemi çalışabilir bir konuma getirmek, uygulamalar
+güncellenirken kullanıcı ayarlarını ve sistemin tutarlılığını korumak
+çok zor olabilmektedir.
 </UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_3.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_5.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
