--- a/trunk/web/projeler/comar/mimari/node_5.html
+++ b/trunk/web/projeler/comar/mimari/node_5.html
@@ -48,84 +48,50 @@
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_6.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 
 
-<H1 ALIGN=center>VÇTD<BR>
-(VÇTD Çomar Tasarımı Değildir)</H1>
+<H1 ALIGN=center>ÇOMAR Mimari Belgesi</H1>
 
-<H3 ALIGN=center>Serdar Köylü, A. Murat Eren, Gürer Özen</H3>
+<H3 ALIGN=center>Gürer Özen (gurer @ uludag.org.tr)</H3>
 
-<H3 ALIGN=center>24 Kasım 2004</H3>
-<H2><A NAME="htoc5">2</A>&nbsp;&nbsp;Gereksinimler</H2>
-Uygulamalar arası uyumlu çalışmayı sağlamak için her uygulama,
-<OL type=1><LI>
-Diğer uygulamaların bilgilerine erişebilmeli,
-<LI>Kendi bilgilerini diğer uygulamalara sunabilmeli,
-<LI>Önceden belirlenmiş görevler içinden neleri yapabildiğini sisteme
-bildirebilmeli,
-<LI>Kendi görevleri dışındaki işlere karışmamalı, bunları ilgili uygulamalardan
-istemeli,
-<LI>Bilgileri değiştiğinde, ilgilenen uygulamaların haberdar edilmesini
-sağlamalıdır.
-</OL>
-Diğer çözümlerin noksanlıklarına takılmadan bunları sağlamak için,
-<OL type=1><LI>
-Uygulamaların çalışmalarını yönetecek bilgiler ve ayarlanması gerektiği
-düşünülen seçenekler genelde uygulama yazarları tarafından önceden
-düşünülerek bir takım ayar dosyalarından okunup kullanılacak duruma
-getirilmiştir. En az emekle entegrasyonu sağlamak ve kapalı kodlu
-üçüncü parti yazılımların da sisteme konabilmesini olanaklı kılmak
-için, uygulamaları oldukları gibi kabul edip, bu ayar dosyalarını
-değiştirmek yoluyla entegre etmek gereklidir.
-<LI>Ayar dosyasından değil de, komut satırından veya benzeri değişik yollarla
-değiştirilen seçenekler ve türlü ayar dosyası biçimleri (ini, XML,
-vs) bulunmaktadır. Ayrıca uygulamalar arası uyum düzeyinde bir ayar,
-alt düzeylerde birden çok ayara karşılık gelebilir. Bu tür implementasyon
-farklılıklarının enkapsüle edilebildiği nesnel bir yaklaşım gerekmektedir.
-<LI>Bir uygulamanın sistemde yapabileceği görevlerin ve alt düzey ayar
-işlemlerinin nasıl yapılacağının bilgisi uygulamanın kendisi ile birlikte
-gelmeli ve uygulamayı en iyi bilen kişi olan paketleyici tarafından
-hazırlanmalıdır. Bu, nesnel yaklaşımla enkapsüle edilmiş ayar işlemlerinin,
-her türlü uygulamanın alt düzey ihtiyaçlarına çevrilebilmesini sağlayacaktır.
-<LI>Nesnel yaklaşımda, uygulamaların bilgilerini ve görevlerini sunacakları
-nesneleri, ve birbirleriyle ilişkilerini gösteren bir model gerekmektedir.
-Bu nesne modelinin hiyerarşik olması, daha kolay kavramayı ve öğrenmeyi
-sağlayacaktır.
-<LI>Nesne modelinde, diğer bilgisayarlardan gelen nesnelerin, birer uzak
-nesne olarak yer alabilmesi ve kullanıcı tarafından aynen yerel nesneler
-gibi yönetilebilmesi, bir ağ yönetim sistemi oluşturmayı çok basit
-bir iş haline getirecektir. Hiyerarşik model burda erişim yetki denetimini
-belli alt sistemler bazında ayarlamayı kolaylaştıracaktır.
-<LI>Aynı görevi yapabilecek birden fazla uygulama olabilir. Duruma göre
-görevlerin hepsine birden yaptırılması, veya içlerinden birinin seçilmesi
-gerekebilir. Seçim için uygulamaların yeteneklerinden başka, o anda
-hangilerinin çalıştığı, hangilerinin çalıştırılabilir olduğu gibi
-kriterlere de bakılması gerekecektir. Uygulama görevi aldığında ise,
-çalışmaya başlayabilmesi için kendi içinde birden fazla işlem yapması
-ve duruma göre nasıl çalışacağına karar vermesi gerekebilir. Bütün
-bu dinamik bilgileri tanımlayabilmek için, iterasyon, karar verme,
-karşılaştırma özellikleri olan bir dil gerekecektir.
-<LI>Bu dilin seçimi özgür bırakıldığında, takip edilmesi zor, çok sayıda
-bağımlılık ortaya çıkmakta; diller arası uyum ve bilgilerin hata giderme
-işlemleri ise çok güçleşmekte olduğundan, tek bir dil üzerinde karar
-verilmelidir.
-<LI>Bu dilin önceki şartları sağlamak için, nesne kavramına sahip olması,
-kontrol edilemeyecek bağımlılık problemleri çıkarabilecek genişleme
-mekanizmaları taşımaması gereklidir. Transaction ve asenkron çalışma
-yapılabilmesi için tüm durumunu (state) içinde taşıyabilen bir script
-dili olması mecburidir.
-<LI>Basit ve öğrenmesi kolay olması, araçlarla işlenebilmesi, IDE ve RAD
-araçları yardımıyla üretilebilir olması, paketleme ve hata giderme
-sürecini çok kısaltacaktır. Uzak işlemler, transaction, profil yönetimi
-ve asenkron çalışma için sentaks kolaylıkları içermesi de olumlu puanlardır.
-<LI>Transaction, uzak nesneler, profil yönetimi, asenkron çalışma, erişim
-yetkileri gibi özellikleri uygulayabilmek için bu dildeki betikleri
-yönetip işletecek bir uygulamaya gerek vardır.
-</OL>
-Toparlarsak, gereksinimlerimizi karşılayabilecek ve diğer benzer sistemlerdeki
-sorunlara düşmeyecek bir yapılandırma yönetim çerçevesi için ihtiyacımız
-olan parçalar, bir nesne modeli (2-5), bir nesne tanımlama dili (6-9),
-uygulamalar için bu dilde yazılmış betikler (1,3) ve bu betikleri
-işletecek bir uygulamadır (10).<BR>
+<H3><A NAME="htoc5">2.3</A>&nbsp;&nbsp;Diğer İşletim Sistemleri</H3>
+Windows, OS/2, MacOS X gibi işletim sistemlerinde, sistemin parçaları
+ve kullanıcının çalışma ortamını oluşturan uygulamalar genellikle
+tek bir merkezden çıktıkları için, uyum sorunları işletim sisteminin
+çağrıları (API si) üzerinden çözülmektedir. Ayarları toplu halde tutan
+merkezi bir kütük ile birlikte; çokluortam, ağ protokolü, donanım
+yöneticisi gibi parçalar için parçaların yerleşebileceği modül yapıları
+bulunmaktadır.<BR>
 <BR>
+Bu yaklaşımda şu noksanlıkları görüyoruz:
+<UL><LI>
+Uygulamaların ayarlarına merkezi erişim sunulması, tek başına istenen
+faydayı getirmemektedir. Bir genel model olmadığı için, bu bilgileri
+kullanmak isteyen kullanıcı yada diğer uygulamaların, bilgiyi sunan
+uygulama ve ayarları hakkında detaylı bilgiye sahip olması sorunu
+hala ortadadır.
+<LI>Uygulamalar ve yönetim sistemi arasında API düzeyinde bir ilişki,
+iki grubu iç içe geçirip direkt bağlantı sağlayacağı için, parçaların
+bağımsızlığını azaltacaktır. Bu da, ayrı ayrı parçaların geliştiricilerinin,
+adam/ay modelinde bağımsız çalışmak yerine, bir araya gelip karşılıklı
+iletişim ve senkronizasyon ile çalışmasına, dolayısıyla geliştirme
+işlerinin ölçeklenebilirliğinin azalmasına yol açmaktadır.
+<LI>Parçaların farklı ellerden çıktıkları ve alternatiflerin bol olduğu
+özgür yazılım modeline uymamaktadır.
+<LI>Dağıtımımıza girecek uygulamaları yeni API leri kullanacak şekilde
+değiştirmek, uygulama kodu üzerinde büyük değişiklikler
+yapmayı, ve yapılan değişikliklerin yeni sorunlara yol açmadığını
+kapsamlı olarak analiz etmeyi gerektirmektedir. Bu da büyük zaman
+ve emek harcamasına yol açacaktır. Kodunu değiştirme olanağı olmayan
+uygulamaların sisteme entegre edilebilmesini önleyecektir.
+<LI>Bu API lerin her uygulamadan kullanılabilmesi ya CORBA, COM gibi karmaşık
+çözümler ya da çok sayıda ``wrapper'' gerektirmektedir.
+<LI>Bir alt sistemin yetersiz kaldığı görülüp yeni bir alt sistem yapısı
+geliştirildiğinde, API değişikliğine yol açmamak için API üzerindeki
+değer ve çağrılara kapsamları dışında anlamlar ve görevler yüklenmekte,
+ve API yi öğrenmek ve kullanmak isteyenlerin işi çok zorlaşmaktadır.
+Ya da API değişikliği yapılmakta, ve varolan uygulamaların yeni API
+yi taşınması, eski ve üçüncü parti uygulamalar için uyumluluk katmanları
+hazırlanması gibi fazladan sorunlar çıkmaktadır.
+</UL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_4.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_6.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
 <!-- SAYFA İÇERİK SONU -->
