Pardus KKK ekle..

--- a/trunk/web/projeler/index.html
+++ b/trunk/web/projeler/index.html
@@ -157,6 +157,17 @@ Ortak sözlük ve çeviri çalışmalarını kapsayan projedir.
 Projenin çalışma sayfasına ulaşmak için <a href="turkce/index.html">tıklayınız</a>.
 </p>
 
+
+<p class="baslik"><img src="../images/bullet-krm.png"> Pardus Kurulum ve Kullanım Kılavuzu</p>
+
+Pardus Kullanım Kılavuzu, son kullanıcıya yönelik olarak
+tasarlanan ve geliştirilen Pardus Linux işletim sisteminin kurulum ve
+kullanımını anlatır. 
+
+<p>
+Projenin çalışma sayfasına ulaşmak için <a href="pardus-kilavuz/index.html">tıklayınız</a>.
+
+
 </td>
               </tr>
 </table>
