--- a/trunk/web/bulten/index.html
+++ b/trunk/web/bulten/index.html
@@ -50,7 +50,8 @@
 <td width="10" valign="top">&nbsp;</td>
                <td width="661" valign="top" class="metin"><p><span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Ulusal Dağıtım Bültenleri</font></span><br><br><br>
 
-<center> <p><b>Bülten Arşivi</b></p><a href="arsiv/06102005.html">Uludağ Haftalık Bülteni - 10 Haziran 2005
+<center> <p><b>Bülten Arşivi</b></p><a href="arsiv/02082005.html">Uludağ Haftalık Bülteni - 2 Ağustos 2005
+</a><br><a href="arsiv/06102005.html">Uludağ Haftalık Bülteni - 10 Haziran 2005
 </a><br><a href="arsiv/05052005.html">Uludağ Haftalık Bülteni - 05 Mayıs 2005
 </a><br><a href="arsiv/21032005.html">Uludağ Haftalık Bülteni - 21 Mart 2005
 </a><br><a href="arsiv/27022005.html">Uludağ Haftalık Bülteni - 27 Şubat 2005
