--- a/web/index.html
+++ b/web/index.html
@@ -102,6 +102,10 @@ karar 30 Ocak 2005'te yayınlanan Uludağ Haftalık Bülteni'nde açıklanmışt
 <br>
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11">
 
+<strong> 02 Ağustos 2005</strong>
+// Pardus'un Kurulum ve Kullanım Kılavuzu'nun yazılmasına başlandı. Proje ile ilgili tüm bilgilere
+<a href="http://www.uludag.org.tr/projeler/pardus-kilavuz/">buradan</a> ulaşabilirsiniz.<br>
+
 <strong> 12 Temmuz 2005</strong>
 // Pardus'un kurulan versiyonu ile beraber gelecek olan, Uludağ Projesinin yeni nesil paket yöneticisi PİSİ'nin
 ilk dökümanı <a href="http://www.uludag.org.tr/projeler/pisi/">yayınlandı</a>!<br>
@@ -120,6 +124,10 @@ Kurulum için yardımcı olması ümidi ile hazırlanmış bir belge de <a href=
 
 <td valign="top" class="metin">
 
+<br>
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
+<strong><a href="bulten/arsiv/02082005.html">2 Ağustos 2005</a></strong>
+// Yeni geliştiriciler, PİSİ, ÇOMAR, KDE Türkiye...
 <br>
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11"> 
 <strong><a href="bulten/arsiv/06102005.html">10 Haziran 2005</a></strong>
