--- a/web/index.html
+++ b/web/index.html
@@ -51,23 +51,29 @@
 <td width="20" height="286" valign="top"><img src="./images/bullet6.png" alt="nokta" width="20" height="20" hspace="0" vspace="0" align="top"></td>
 <td width="10" valign="top">&nbsp;</td>
 <td width="661" valign="top" class="metin"><span class="metin"><img src="./images/54.jpg" alt="nokta" width="350" height="263" hspace="3" vspace="10" align="right"></span>
-<span class="baslik">Ulusal Dağıtım Projesi ilk ürününü çıkardı:<br>
-Pardus Ulusal İşletim Sistemi Çalışan CD</span><br>
+<span class="baslik">Uludağ projesinde gelişmeler:<br>
+Yeni bülten, yeni çalışanlar, kullanım kılavuzu</span><br>
 <br>
 
-<span class="metin">Ankara Milli Kütüphane'de düzenlenen 
-<a href="http://senlik.linux.org.tr/">4. Linux ve Özgür Yazılım Şenliği</a>'nde 
-katılımcılara dağıtılan Pardus Çalışan CD 1.1,
-Pardus Ulusal İşletim Sistemi'nin CD üzerinde çalışan son sürümünü içeriyor.
-CD içerisinde ofis araçları (metin düzenleyici, hesap tablosu, sunum hazırlayıcı,
-vb.), İnternet araçları (tarayıcı, e-posta, sohbet, vb.), çokluortam
-ve grafik araçları (film oynatıcı, müzik çalar, vb.), oyunlar ve
-çok sayıda uygulama mevcut. </span>
 
-<p class="metin">
-LKD'nin düzenlediği <a href="http://senlik.linux.org.tr/">4. Linux ve Özgür Yazılım Şenliği</a>'ne katılan Uludağ Projesi ekibi ve katkıcıları tarafından katılımcılara Ulusal Dağıtım hakkında bilgi verildi 
-ve Uludağ Projesi standında <a href="urunler/pardus_calisan_cd_1.1.html">Pardus Çalışan CD 1.1</a> tam sürümü dağıtıldı.
-</p>
+<span class="metin">Pardus, ilk sürümünü çıkartmaya
+hazırlanırken, <a href=gelistiriciler.html>geliştiricilerin</a>
+yoğun çalışmasıyla birlikte tasarım çalışmaları da hız kazandı. 
+Pardus'u oluşturan paketlerin derlenmesine başlandı. Tasarımına
+başlanan kurulum programı da yakında ortaya çıkacak.
+
+</span>
+
+<p>
+
+<span class="metin">Linux, getirdiği açık standartlar, 
+serbest dağıtılabilme ve özgür yazılım kullanım 
+avantajı ile kamu ve özel sektörde daha serbest 
+ve güvenilir teknolojinin önünü açmakla kalmayacak, 
+bireylerin bilgisayar
+ile tanışmasını da hızlandıracak.  
+</span>
+
 
 <p class="baslik"><span class="emph">Pardus,
 özgür yazılım yaklaşımı ile açık kaynaklı yayımlanmakta ve</span> <a href="./gpl.html">GNU Genel Kamu Lisansı</a>              <span class="emph">(General Public License – GPL) ile özgürce dağıtılmaktadır. Bu
