--- a/trunk/web/projeler/pardus-kilavuz/index.html
+++ b/trunk/web/projeler/pardus-kilavuz/index.html
@@ -95,7 +95,7 @@ Pardus Kullanım Kılavuzu'nun yazımı için açılan web sayfası
 <a href=http://www.uludag.org.tr/belgeler/pardus-kilavuz>www.uludag.org.tr/belgeler/pardus-kilavuz</a>
 adresindedir. Kılavuzun yazımı sırasında etkin görev almak (öneri getirilmesi, bölüm
 yazımı, yazılan bölümlerin incelenmesi ve denetiminin yapılması
-vb) aşağıdaki e-posta listesine üye olmasını rica ederiz.
+vb) isteyenlerin aşağıdaki e-posta listesine üye olmasını rica ederiz.
 <p>
 <p><span class="baslik">Bağlantılar</span></p>
 
