--- a/web/hakkimizda.html
+++ b/web/hakkimizda.html
@@ -255,7 +255,21 @@ geçildi.
                 </td>
               </tr>
             </table>            
-<center><a href="gelistiriciler.html">Pardus Geliştiricileri</a></center>
+<p>
+<table width="695" border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20" valign="top"><img src="./images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top"></td>
+<td width="10" valign="top">&nbsp;</td>
+<td width="661" valign="top" class="metin">
+<p class="metin">
+Uludağ projesinde görev alan tüm proje geliştiricilerini görmek
+için <a href=gelisticiler.html>tıklayınız</a>.
+</td>
+</table>
+
+</p>
+
+
 <!-- SAYFA İÇERİK SONU -->
 
 <!-- yayın hakkı -->
